# geoenrich

./: .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  Geoenrich tutorial.ipynb  MANIFEST.in  README.md  setup.cfg
data/: catalog.csv
docker/: Dockerfile  README.md  docker-compose.yml  initialize.py
docker/app/: main.py
docker/app/static/styles/: style.css
docker/app/templates/: download old.html  download.html  home.html
docs/: conf.py  geo-enrich.rst  index.rst  requirements.txt
docs/source/: biodiv.rst  conf.py  dataloader.rst  enrichment.rst  examples.rst  exports.rst  index.rst  install.rst  online.rst  r-install.rst  r-tutorial.ipynb  satellite.rst  tutorial.ipynb  variables.rst
geo-enrich/geo-enrich/: credentials.py  geo-enrich.py
geo_enrich/geo_enrich/: geo_enrich.py
geoenrich/: biodiv.py  catalog.csv  credentials.example.py  credentials_example.py  dataloader.py  downstream.py  enrichment.py  exports.py  geoenrich.py  main.py  satellite.py  tutorial.ipynb  upstream.py
geoenrich/data/: areas.csv  catalog.csv  personal_catalog.csv  webapp_areas.csv  webapp_turtles.csv
geoenrich/geoenrich/: credentials.example.py
