[metadata]
name = geoenrich
version = 0.3
author = Gaétan Morand (UMR Marbec)
author_email = gaetan.morand@ird.fr
description = A package to enrich your geo-referenced data (eg. species occurrences) with environmental data.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
	Tutorial = https://github.com/morand-g/geoenrich/blob/main/geoenrich/tutorial.ipynb
	Documentation = https://geoenrich.readthedocs.io
	Code = https://github.com/morand-g/geoenrich
    	Bug Tracker = https://github.com/morand-g/geoenrich/issues
classifiers =
    	Programming Language :: Python :: 3.6
    	Programming Language :: Python :: 3.7
    	Programming Language :: Python :: 3.8
    	Programming Language :: Python :: 3.9
    	Programming Language :: Python :: 3.10
    	Programming Language :: Python :: 3.11
    	Development Status :: 4 - Beta
    	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    	Operating System :: OS Independent
    	Natural Language :: English
    	Topic :: Software Development :: Libraries :: Python Modules
    	Intended Audience :: Science/Research
    	Topic :: Scientific/Engineering :: Bio-Informatics
    	Topic :: Scientific/Engineering :: Atmospheric Science
    	Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
	numpy
	pandas
	geopandas
	netCDF4
	python-dwca-reader
	tqdm

