[metadata]
name = geoenrich
version = 0.5.5
author = Gaétan Morand (UMR Marbec)
author_email = gaetan.morand@ird.fr
description = A package to enrich your geo-referenced data (e.g. species occurrences) with environmental data.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
	Tutorial = https://geoenrich.readthedocs.io/en/latest/tutorial.html
	Documentation = https://geoenrich.readthedocs.io
	Code = https://github.com/morand-g/geoenrich
    	Bug Tracker = https://github.com/morand-g/geoenrich/issues
classifiers =
    	Programming Language :: Python :: 3
    	Development Status :: 4 - Beta
    	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    	Operating System :: OS Independent
    	Natural Language :: English
    	Topic :: Software Development :: Libraries :: Python Modules
    	Intended Audience :: Science/Research
    	Topic :: Scientific/Engineering :: Bio-Informatics
    	Topic :: Scientific/Engineering :: Atmospheric Science
    	Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
	numpy
	pandas
	geopandas
	netCDF4==1.5.8
	python-dwca-reader
	tqdm
	opencv-python
	pathlib
	rasterio
	pygbif==0.6.1
	matplotlib
	appdirs
	geojson_rewind
	geomet
